Add assets and enhance styling with Gilroy font and service cards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               class="hidden md:flex ml-4 justify-center align-middle items-center"
             >
               <ul
-                class="flex justify-center align-middle items-center gap-4 font-medium"
+                class="flex justify-center align-middle font-[gilroy] items-center gap-4 font-medium"
               >
                 <li><a href="#" class="font-normal">Home</a></li>
                 <li><a href="#" class="font-normal">About</a></li>
@@ -115,7 +115,7 @@
             class="flex flex-col justify-center lg:w-1/2 text-center lg:text-left"
           >
             <h1
-              class="text-7xl font-light text-gray-500 break leading-20 capitalize sm:text-6xl"
+              class="text-7xl font-light font-[gilroy] text-gray-500 break leading-20 capitalize sm:text-6xl"
             >
               Providing Best
               <br />
@@ -165,36 +165,141 @@
             <img
               src="./asset/reebook.jpg"
               alt="reebook Sponsor"
-              class="h-14 w-auto object-contain grayscale hover:grayscale-0 transition"
+              class="h-14 w-auto object-contain transition"
             />
           </div>
           <div class="flex justify-center items-center">
             <img
               src="./asset/amazon.jpg"
               alt="Amazon Sponsor "
-              class="h-14 w-auto object-contain grayscale hover:grayscale-0 transition"
+              class="h-14 w-auto object-contain transition"
             />
           </div>
           <div class="flex justify-center items-center">
             <img
               src="./asset/black rock.jpg"
               alt="black rock Sponsor"
-              class="h-14 w-auto object-contain grayscale hover:grayscale-0 transition"
+              class="h-14 w-auto object-contain transition"
             />
           </div>
           <div class="flex justify-center items-center">
             <img
               src="./asset/book.jpg"
               alt="Book Sponsor"
-              class="h-14 w-auto object-contain grayscale hover:grayscale-0 transition"
+              class="h-14 w-auto object-contain transition"
             />
           </div>
           <div class="flex justify-center items-center">
             <img
               src="./asset/udemy.jpg"
               alt="Udemy Sponsor"
-              class="h-14 w-auto object-contain grayscale hover:grayscale-0 transition"
+              class="h-14 w-auto object-contain transition"
             />
+          </div>
+        </div>
+      </section>
+      <section class="min-h-screen max-w-screen m-4">
+        <div
+          class="flex flex-col justify-center align-middle items-center text-center lg:text-left"
+        >
+          <h1
+            class="text-7xl font-light text-gray-500 font-[gilroy] leading-20 capitalize sm:text-6xl"
+          >
+            Best
+            <span
+              class="text-[#25A4AD] text-7xl leading-20 capitalize sm:text-6xl font-extrabold"
+              >Services</span
+            >
+          </h1>
+          <p class="mt-6 mb-8 text-lg font-medium text-gray-800">
+            Letter of on become he tended active enable to. Vicinity relation
+            sensible sociable surprise screened no up as.
+          </p>
+        </div>
+        <div class="max-w-6xl mx-auto">
+          <!-- Grid Container -->
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
+            <div class="service-card rounded-3xl h-64 md:h-80 cursor-pointer">
+              <img src="./asset/web development.jpg" alt="Web Development" />
+              <div class="service-overlay"></div>
+              <div class="service-content text-center p-6">
+                <h3 class="text-white text-3xl md:text-4xl font-bold mb-4">
+                  Web<br />Development
+                </h3>
+                <div class="flex gap-1 justify-center">
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Web Designing - Top Right -->
+            <div class="service-card rounded-3xl h-64 md:h-80 cursor-pointer">
+              <img src="./asset/web design.jpg" alt="Web Development" />
+              <div class="service-overlay"></div>
+              <div class="service-content text-center p-6">
+                <h3 class="text-white text-3xl md:text-4xl font-bold mb-4">
+                  Web<br />Designing
+                </h3>
+                <div class="flex gap-1 justify-center">
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Database Management - Bottom Left -->
+            <div class="service-card rounded-3xl h-64 md:h-80 cursor-pointer">
+              <img src="./asset/database.jpg" alt="Database Management" />
+              <div class="service-overlay"></div>
+              <div class="service-content text-center p-6">
+                <h3 class="text-white text-3xl md:text-4xl font-bold mb-4">
+                  Database<br />Management
+                </h3>
+                <div class="flex gap-1 justify-center">
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- SEO - Bottom Right -->
+            <div class="service-card rounded-3xl h-64 md:h-80 cursor-pointer">
+              <img src="./asset/seo.jpg" alt="SEO" />
+              <div class="service-overlay"></div>
+              <div class="service-content text-center p-6">
+                <h3 class="text-white text-3xl md:text-4xl font-bold mb-4">
+                  SEO
+                </h3>
+                <div class="flex gap-1 justify-center mt-4">
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                  <span class="text-yellow-400 text-2xl">★</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Footer Badge and Button -->
+          <div class="text-center space-y-4">
+            <div>
+              <button
+                class="border-2 border-teal-400 text-teal-600 px-8 py-3 rounded-lg font-semibold hover:bg-teal-400 hover:text-white transition-colors duration-300"
+              >
+                Explore All
+              </button>
+            </div>
           </div>
         </div>
       </section>
