Add feature section with service cards and enhance scrollbar styling

--- a/index.html
+++ b/index.html
@@ -303,6 +303,103 @@
           </div>
         </div>
       </section>
+      <section class="bg-white">
+        <div
+          class="flex flex-col justify-center align-middle items-center text-center lg:text-left"
+        >
+          <h1
+            class="text-7xl font-light text-gray-500 font-[gilroy] leading-20 capitalize sm:text-6xl"
+          >
+            Our
+            <span
+              class="text-[#25A4AD] text-7xl leading-20 capitalize sm:text-6xl font-extrabold"
+              >Features</span
+            >
+          </h1>
+          <p class="text-base text-gray-700 md:text-lg">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+            <br />
+            accusantium doloremque rem aperiam, eaque ipsa quae.
+          </p>
+        </div>
+        <div class="px-4 py-16 mx-auto flex-col md:flex-col lg:flex-row">
+          <div
+            class="flex gap-8 flex-col md:flex-row overflow-x-auto scrollbar-hide"
+          >
+            <div
+              class="max-w-md sm:mx-auto shadow-xl border-2 border-gray-300 p-4 sm:text-center"
+            >
+              <h6 class="mb-5 text-xl text-[#25A4AD] p-2 font-bold leading-5">
+                Work
+              </h6>
+              <p class="mb-5 text-sm text-gray-500">
+                Outward clothes promise at gravity do excited. Sufficient
+                particular impossible by reasonable oh expression is. Yet
+                preference connection unpleasant yet melancholy but end
+                appearance.
+              </p>
+              <a
+                href="/"
+                aria-label=""
+                class="inline-flex text-[#25A4AD] items-center font-semibold transition-colors duration-200 hover:text-[#1b7f85]"
+                >Learn more</a
+              >
+            </div>
+
+            <div
+              class="max-w-md sm:mx-auto shadow-xl border-2 border-gray-300 p-4 sm:text-center"
+            >
+              <h6 class="mb-5 text-xl p-2 font-bold leading-5">Thinking</h6>
+              <p class="mb-5 text-sm text-gray-500">
+                Outward clothes promise at gravity do excited. Sufficient
+                particular impossible by reasonable oh expression is. Yet
+                preference connection unpleasant yet melancholy but end
+                appearance.
+              </p>
+              <a
+                href="/"
+                aria-label=""
+                class="inline-flex text-[#25A4AD] items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                >Learn more</a
+              >
+            </div>
+            <div
+              class="max-w-md sm:mx-auto shadow-xl border-2 border-gray-300 p-4 sm:text-center"
+            >
+              <h6 class="mb-5 text-xl p-2 font-bold leading-5">Colabration</h6>
+              <p class="mb-5 text-sm text-gray-500">
+                Outward clothes promise at gravity do excited. Sufficient
+                particular impossible by reasonable oh expression is. Yet
+                preference connection unpleasant yet melancholy but end
+                appearance.
+              </p>
+              <a
+                href="/"
+                aria-label=""
+                class="inline-flex text-[#25A4AD] items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                >Learn more</a
+              >
+            </div>
+            <div
+              class="max-w-md sm:mx-auto shadow-xl border-2 border-gray-300 p-4 sm:text-center"
+            >
+              <h6 class="mb-5 text-xl p-2 font-bold leading-5">Thinking</h6>
+              <p class="mb-5 text-sm text-gray-500">
+                Outward clothes promise at gravity do excited. Sufficient
+                particular impossible by reasonable oh expression is. Yet
+                preference connection unpleasant yet melancholy but end
+                appearance.
+              </p>
+              <a
+                href="/"
+                aria-label=""
+                class="inline-flex text-[#25A4AD] items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                >Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
