--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
           <!-- Image -->
           <div class="lg:w-1/2 flex justify-center items-center">
             <img
-              src="./asset/HeroIMage-removebg-preview (1).png"
+              src="./asset/Group 1382.png"
               alt="Hero Image"
-              class="object-cover h-130 w-auto object-center rounded-lg"
+              class="object-cover w-auto object-center rounded-lg"
             />
           </div>
         </div>
@@ -322,7 +322,9 @@
             accusantium doloremque rem aperiam, eaque ipsa quae.
           </p>
         </div>
-        <div class="px-4 py-16 mx-auto flex-col md:flex-col lg:flex-row">
+        <div
+          class="px-4 py-16 m-auto justify-center flex-col align-middle items-center md:flex-col lg:flex-row"
+        >
           <div
             class="flex gap-8 flex-col md:flex-row overflow-x-auto scrollbar-hide"
           >
@@ -398,6 +400,78 @@
               >
             </div>
           </div>
+        </div>
+      </section>
+      <section class="max-w-6xl mx-auto px-6 py-16">
+        <!-- Heading -->
+        <div class="text-center mb-12">
+          <h2 class="text-3xl md:text-4xl font-semibold">
+            What <span class="text-[#25A4AD] font-bold">Clients</span> Say
+          </h2>
+          <p class="text-gray-500 mt-2 text-sm md:text-base max-w-xl mx-auto">
+            Letter of on become he tended active enable to. Vicinity relation
+            sensible sociable surprise screened no up as.
+          </p>
+        </div>
+
+        <!-- Testimonial Card -->
+        <div
+          class="grid md:grid-cols-2 items-center gap-2 bg-white rounded-xl shadow-2xl overflow-hidden"
+        >
+          <!-- Image Section -->
+          <div class="flex justify-center md:justify-end">
+            <img
+              id="Clasoure"
+              src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687"
+              alt="Client"
+              class="md:h-92 w-screen object-cover rounded-[20%_0_0_0]"
+            />
+          </div>
+
+          <!-- Text Section -->
+          <div class="p-1 md:p-10">
+            <h3 id="Heading" class="text-xl font-semibold mb-2">
+              Best Developers
+            </h3>
+            <p
+              id="testimonialReviews"
+              class="text-gray-600 mb-4 text-sm md:text-base"
+            >
+              Outward clothes promise at gravity do excited. Sufficient
+              particular impossible by reasonable expression is. Yet preference
+              connection unpleasant yet melancholy but end appearance. And
+              excellence partially estimating terminated day everything.
+            </p>
+
+            <!-- Stars -->
+            <div class="flex items-center text-yellow-400 mb-3">
+              <span>★★★★★</span>
+            </div>
+
+            <!-- Name and Title -->
+            <div>
+              <p class="font-semibold">Robert Johnson</p>
+              <p class="text-gray-500 text-sm">Director at Behance</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slider Dots -->
+        <div class="flex justify-center align-middle items-center gap-5">
+          <button class="rounded-full py-2 px-4 border-2 border-teal-500">
+            <img
+              onclick="Previous()"
+              src="./asset/arrow_back_24dp_25A4AD_FILL0_wght400_GRAD0_opsz24.svg"
+              alt="back arrow"
+              class="text-xl"
+            />
+          </button>
+          <button class="rounded-full border-2 border-teal-500 py-2 px-4">
+            <img
+              onclick="Next()"
+              src="./asset/arrow_forward_24dp_25A4AD_FILL0_wght400_GRAD0_opsz24.svg"
+            />
+          </button>
         </div>
       </section>
     </div>
