--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           class="px-4 py-16 m-auto justify-center flex-col align-middle items-center md:flex-col lg:flex-row"
         >
           <div
-            class="flex gap-8 flex-col md:flex-row overflow-x-auto scrollbar-hide"
+            class="flex gap-8 flex-col md:flex-col lg:flex-row overflow-x-auto scrollbar-hide"
           >
             <div
               class="max-w-md sm:mx-auto shadow-xl border-2 border-gray-300 p-4 sm:text-center"
@@ -457,7 +457,7 @@
         </div>
 
         <!-- Slider Dots -->
-        <div class="flex justify-center align-middle items-center gap-5">
+        <div class="flex justify-center m-4 align-middle items-center gap-5">
           <button class="rounded-full py-2 px-4 border-2 border-teal-500">
             <img
               onclick="Previous()"
