feat: enhance utility classes and color variables in output.css
- Added new color variables: --color-green-500, --color-blue-600, --color-blue-700, --color-indigo-500, --color-violet-600.
- Introduced new container and text size variables: --container-sm, --text-xs, --text-5xl.
- Expanded spacing utilities with additional margin and padding classes.
- Added new flex and display utilities for better layout control.
- Enhanced border and background color utilities with new options.
- Introduced dark mode support for various background and text colors.
- Added new transform and transition utilities for improved animations.
- Included new properties for better control over filters and shadows.

--- a/index.html
+++ b/index.html
@@ -474,6 +474,278 @@
           </button>
         </div>
       </section>
+      <section class="py-20 dark:bg-gray-100 dark:text-gray-800">
+        <div class="container px-4 mx-auto">
+          <div class="max-w-2xl mx-auto mb-16 text-center">
+            <h2 class="text-4xl text-[#25A4AD] font-bold text- lg:text-5xl">
+              <span class="font-normal tracking-wider capitalize text-black"
+                >Our</span
+              >
+              Pricing Plan
+            </h2>
+          </div>
+          <div class="flex flex-wrap items-stretch -mx-4">
+            <div class="flex w-full mb-8 sm:px-4 md:w-1/2 lg:w-1/3 lg:mb-0">
+              <div
+                class="flex grow flex-col p-6 h-120 space-y-6 rounded shadow sm:p-8 dark:bg-gray-50"
+              >
+                <div
+                  class="space-y-2 mb-7 flex justify-center align-middle items-center flex-col"
+                >
+                  <h4 class="text-2xl font-bold">For Starter</h4>
+                  <span class="text-6xl font-bold">$59 </span>
+                </div>
+                <ul class="flex-1 mb-6 dark:text-gray-600">
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Feedback Categorization</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Features prioritization</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Real-time collaboration</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Feedback loop notifications</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Essential dev tools integrations</span>
+                  </li>
+                </ul>
+                <button
+                  type="button"
+                  class="inline-block px-5 py-5 font-semibold tracking-wider text-center rounded text-[#25A4AD] border-2 border-[#25A4AD]"
+                >
+                  Get Started
+                </button>
+              </div>
+            </div>
+            <div class="flex w-full mb-8 sm:px-4 md:w-1/2 lg:w-1/3 lg:mb-0">
+              <div
+                class="flex grow flex-col p-6 space-y-6 rounded shadow sm:p-8 text-[#25A4AD]"
+              >
+                <div
+                  class="space-y-2 flex justify-center align-middle items-center flex-col"
+                >
+                  <h4 class="text-2xl text-[#25A4AD] font-bold">For Teams</h4>
+                  <span class="text-6xl font-bold">$99 </span>
+                </div>
+
+                <ul class="flex-1 mb-6">
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Feedback Categorization</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Features prioritization</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Real-time collaboration</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Feedback loop notifications</span>
+                  </li>
+                  <li class="flex mb-2 space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Essential dev tools integrations</span>
+                  </li>
+                </ul>
+                <button
+                  type="button"
+                  class="inline-block px-5 py-5 font-semibold tracking-wider text-center rounded text-white bg-[#25A4AD]"
+                >
+                  Request Demo
+                </button>
+              </div>
+            </div>
+            <div class="flex w-full mb-8 sm:px-4 md:w-1/2 lg:w-1/3 lg:mb-0">
+              <div
+                class="flex grow flex-col h-120 p-6 space-y-6 rounded shadow sm:p-8 dark:bg-gray-50"
+              >
+                <div
+                  class="space-y-2 flex flex-col h-120 justify-center items-center align-middle"
+                >
+                  <h4 class="text-xl font-bold">For Company</h4>
+                  <span class="text-6xl font-bold">Custome </span>
+                </div>
+
+                <ul class="space-y-2 dark:text-gray-600">
+                  <li class="flex items-start space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Feedback Categorization</span>
+                  </li>
+
+                  <li class="flex items-start space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Feedback loop notifications</span>
+                  </li>
+                  <li class="flex items-start space-x-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 20 20"
+                      fill="currentColor"
+                      class="shrink-0 w-6 h-6"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                        clip-rule="evenodd"
+                      ></path>
+                    </svg>
+                    <span>Essential dev tools integrations</span>
+                  </li>
+                </ul>
+                <button
+                  type="button"
+                  class="inline-block px-5 py-5 font-semibold tracking-wider text-center rounded text-[#25A4AD] border-2 border-[#25A4AD]"
+                >
+                  Get Started
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
