feat: add FAQ section with accordion functionality and enhance styling

--- a/index.html
+++ b/index.html
@@ -746,6 +746,113 @@
           </div>
         </div>
       </section>
+      <section
+        class="flex flex-col justify-center items-center px-4 sm:px-6 lg:px-8 py-16 bg-white"
+      >
+        <!-- Heading -->
+        <div class="mb-12 text-center">
+          <h1 class="text-3xl sm:text-4xl lg:text-6xl font-bold text-[#25A4AD]">
+            FAQs
+          </h1>
+          <p class="mt-2 text-gray-500 text-sm sm:text-base max-w-md mx-auto">
+            Find answers to the most common questions below.
+          </p>
+        </div>
+
+        <!-- Accordion -->
+        <div class="w-full max-w-2xl space-y-6">
+          <!-- FAQ 1 -->
+          <button
+            class="w-full border-b border-gray-300 pb-5 text-left group focus:outline-none"
+          >
+            <div class="flex items-start gap-2">
+              <span
+                class="flex items-center gap-1 text-[#25A4AD] font-semibold text-lg sm:text-xl"
+              >
+                <span
+                  class="text-[#25A4AD] transition-transform duration-300 group-focus:rotate-180"
+                >
+                  ▼ </span
+                >:
+              </span>
+              <span
+                class="font-semibold text-base sm:text-lg flex-1 text-gray-800"
+              >
+                She met humoured sir breeding her. Six curiosity day assurance
+                bed necessary.
+              </span>
+            </div>
+            <div
+              class="mt-3 hidden text-gray-600 group-focus:block text-sm sm:text-base leading-relaxed"
+            >
+              Relation so in confined smallest children unpacked delicate. Why
+              sir end believe uncivil respect. Always get adieus nature day
+              course for common. My little garret repair to desire he esteem.
+            </div>
+          </button>
+
+          <!-- FAQ 2 -->
+          <button
+            class="w-full border-b border-gray-300 pb-5 text-left group focus:outline-none"
+          >
+            <div class="flex items-start gap-2">
+              <span
+                class="flex items-center gap-1 text-[#25A4AD] font-semibold text-lg sm:text-xl"
+              >
+                <span
+                  class="text-[#25A4AD] transition-transform duration-300 group-focus:rotate-180"
+                >
+                  ▼ </span
+                >:
+              </span>
+              <span
+                class="font-semibold text-base sm:text-lg flex-1 text-gray-800"
+              >
+                And excellence partiality estimating terminated day everything?
+              </span>
+            </div>
+            <div
+              class="mt-3 hidden text-gray-600 group-focus:block text-sm sm:text-base leading-relaxed"
+            >
+              Darth Plagueis was a Dark Lord of the Sith, so powerful and so
+              wise he could use the Force to influence the midichlorians to
+              create life. He had such a knowledge of the dark side, he could
+              even keep the ones he cared about from dying.
+            </div>
+          </button>
+
+          <!-- FAQ 3 -->
+          <button
+            class="w-full border-b border-gray-300 pb-5 text-left group focus:outline-none"
+          >
+            <div class="flex items-start gap-2">
+              <span
+                class="flex items-center gap-1 text-[#25A4AD] font-semibold text-lg sm:text-xl"
+              >
+                <span
+                  class="text-[#25A4AD] transition-transform duration-300 group-focus:rotate-180"
+                >
+                  ▼ </span
+                >:
+              </span>
+              <span
+                class="font-semibold text-base sm:text-lg flex-1 text-gray-800"
+              >
+                Latter person am secure of estate genius at?
+              </span>
+            </div>
+            <div
+              class="mt-3 hidden text-gray-600 group-focus:block text-sm sm:text-base leading-relaxed"
+            >
+              Basically if they had attempted to fly in earlier, they would've
+              been seen by the Eye and utterly demolished by the still-strong
+              forces within Mordor as Sauron was still very powerful. It’s
+              conceivable a mission that bold could've succeeded if the elves
+              had gotten involved.
+            </div>
+          </button>
+        </div>
+      </section>
     </div>
   </body>
 </html>
