--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
               <ul
                 class="flex justify-center align-middle font-[gilroy] items-center gap-4 font-medium"
               >
-                <li><a href="#" class="font-normal">Home</a></li>
-                <li><a href="#" class="font-normal">About</a></li>
-                <li><a href="#" class="font-normal">Testimonials</a></li>
-                <li><a href="#" class="font-normal">Contact</a></li>
+                <li><a href="#Home" class="font-normal">Home</a></li>
+                <li><a href="#About" class="font-normal">About</a></li>
+                <li>
+                  <a href="#Testimonials" class="font-normal">Testimonials</a>
+                </li>
+                <li><a href="#Contact" class="font-normal">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -85,10 +87,14 @@
           <ul
             class="flex flex-col justify-center align-middle items-center space-y-3 p-4 font-medium"
           >
-            <li><a href="#" class="hover:text-[#25A4AD]">Home</a></li>
-            <li><a href="#" class="hover:text-[#25A4AD]">About</a></li>
-            <li><a href="#" class="hover:text-[#25A4AD]">Testimonials</a></li>
-            <li><a href="#" class="hover:text-[#25A4AD]">Contact</a></li>
+            <li><a href="#Home" class="hover:text-[#25A4AD]">Home</a></li>
+            <li><a href="#About" class="hover:text-[#25A4AD]">About</a></li>
+            <li>
+              <a href="#Testimonials" class="hover:text-[#25A4AD]"
+                >Testimonials</a
+              >
+            </li>
+            <li><a href="#Contact" class="hover:text-[#25A4AD]">Contact</a></li>
             <li class="flex flex-col">
               <button
                 class="w-[200px] text-black px-4 py-2 rounded-lg hover:bg-[#25A4AD] hover:text-white transition"
@@ -115,6 +121,7 @@
             class="flex flex-col justify-center lg:w-1/2 text-center lg:text-left"
           >
             <h1
+              id="Home"
               class="text-7xl font-light font-[gilroy] text-gray-500 break leading-20 capitalize sm:text-6xl"
             >
               Providing Best
@@ -132,7 +139,7 @@
               class="flex flex-col sm:flex-row sm:justify-center lg:justify-start gap-4"
             >
               <a
-                href="#"
+                href="#Get_STarted"
                 class="px-8 py-3 text-lg font-semibold rounded bg-[#25A4AD] text-white hover:opacity-90 transition"
                 >Get Started</a
               >
@@ -203,6 +210,7 @@
           class="flex flex-col justify-center align-middle items-center text-center lg:text-left"
         >
           <h1
+            id="About"
             class="text-7xl font-light text-gray-500 font-[gilroy] leading-20 capitalize sm:text-6xl"
           >
             Best
@@ -405,7 +413,7 @@
       <section class="max-w-6xl mx-auto px-6 py-16">
         <!-- Heading -->
         <div class="text-center mb-12">
-          <h2 class="text-3xl md:text-4xl font-semibold">
+          <h2 id="Testimonials" class="text-3xl md:text-4xl font-semibold">
             What <span class="text-[#25A4AD] font-bold">Clients</span> Say
           </h2>
           <p class="text-gray-500 mt-2 text-sm md:text-base max-w-xl mx-auto">
@@ -573,6 +581,7 @@
                   </li>
                 </ul>
                 <button
+                  id="Get_STarted"
                   type="button"
                   class="inline-block px-5 py-5 font-semibold tracking-wider text-center rounded text-[#25A4AD] border-2 border-[#25A4AD]"
                 >
@@ -852,6 +861,141 @@
             </div>
           </button>
         </div>
+      </section>
+      <section
+        class="min-h-screen bg-linear-to-br from-gray-800 to-gray-900 flex flex-col"
+      >
+        <!-- Main Content Section -->
+        <div
+          class="flex-1 flex items-center justify-center px-4 py-16 md:py-24"
+        >
+          <div class="text-center max-w-2xl">
+            <h1
+              class="text-white text-3xl md:text-4xl lg:text-5xl font-bold mb-8 leading-tight"
+            >
+              People who are<br />ready took these courses!
+            </h1>
+            <button
+              class="border border-gray-500 text-white px-8 py-3 rounded hover:bg-gray-700 transition-colors duration-300"
+            >
+              Schedule demo
+            </button>
+          </div>
+        </div>
+
+        <!-- Footer Section -->
+        <footer class="bg-gray-900 text-white px-6 py-12 md:px-12">
+          <div class="max-w-7xl mx-auto">
+            <!-- Footer Grid -->
+            <div
+              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12 mb-12"
+            >
+              <!-- Company Info -->
+              <div>
+                <h3 class="text-xl font-bold mb-6">Payme</h3>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                  Courthouse 151-02 RF<br />
+                  Av/SBG All Rights Reserved
+                </p>
+              </div>
+
+              <!-- Links -->
+              <div>
+                <h4 class="text-white font-semibold mb-4">Links</h4>
+                <ul class="space-y-3">
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >Degrees</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >FAQ</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >Courses</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
+              </div>
+
+              <!-- Company -->
+              <div>
+                <h4 class="text-white font-semibold mb-4">Company</h4>
+                <ul class="space-y-3">
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >Terms & Conditions</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
+              </div>
+
+              <!-- Get in touch -->
+              <div id="Contact">
+                <h4 class="text-white font-semibold mb-4">Get in touch</h4>
+                <ul class="space-y-3">
+                  <li class="text-gray-400 text-sm">
+                    Courthouse KG<br />
+                    48124 dividing
+                  </li>
+                  <li>
+                    <a
+                      href="tel:919-3262"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >919-3262</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="mailto:info@payme.net"
+                      class="text-gray-400 hover:text-white transition-colors"
+                      >info@payme.net</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="border-t border-gray-800 pt-8 text-center">
+              <p class="text-gray-500 text-sm">
+                © 2021 Payme. All rights reserved
+              </p>
+            </div>
+          </div>
+        </footer>
       </section>
     </div>
   </body>
